# YouTube-Download-Universal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/anti_ban/: mod.rs
src-tauri/src/commands/: download.rs  mod.rs  setup.rs
src-tauri/src/proxy/: config.rs  mod.rs
src-tauri/src/safety/: gate.rs  mod.rs
src-tauri/src/sidecar/: manager.rs  mod.rs
src/components/Info/: InfoPage.tsx
src/components/Kaomoji/: KaomojiReactor.tsx
src/components/SafetyGate/: WarningScreen.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/Setup/: BinaryDownloader.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/Terminal/: InputField.tsx  LogViewer.tsx  ProgressBar.tsx  TerminalLayout.tsx
src/lib/: utils.ts
src/stores/: downloadStore.ts
tauri-plugin-ytdlp/: Cargo.toml  README.md
tauri-plugin-ytdlp/android/: build.gradle.kts  local.properties
tauri-plugin-ytdlp/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-ytdlp/android/src/main/java/: YtdlpPlugin.kt
tauri-plugin-ytdlp/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-ytdlp/examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-ytdlp/examples/vanilla/src-tauri/capabilities/: default.json
tauri-plugin-ytdlp/examples/vanilla/src-tauri/src/: lib.rs
tauri-plugin-ytdlp/permissions/autogenerated/: reference.md
tauri-plugin-ytdlp/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
