[package]
name = "youtube-download-universal"
version = "0.1.0"
description = "Ultra-lightweight YouTube downloader with Retro-Terminal Cute aesthetic"
authors = ["you"]
edition = "2021"
license = "MIT"

[lib]
name = "youtube_download_universal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for parsing yt-dlp output
regex = "1"

# Directory paths
dirs = "6"

# Random number generation
rand = "0.9"

# Error handling
thiserror = "2"
reqwest = { version = "0.13.1", features = ["json", "stream", "gzip"] }
futures-util = "0.3.31"
tauri-plugin-dialog = "2"

# Static initialization for regex caching
once_cell = "1"

# Archive extraction for ffmpeg
zip = "2"

# Local plugin for Android yt-dlp
tauri-plugin-ytdlp = { path = "../tauri-plugin-ytdlp" }

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true
